--- a/catalog.html
+++ b/catalog.html
@@ -42,31 +42,32 @@
                         <!--Бассейн</label>-->
                         <!--  Бассейн  -->
                         <input type="checkbox" class="checkbox-button" id="id-pool" name="pool" value="value-pool" checked>
-                        <label for="id-pool" name="pool">Бассейн</label>
+                        <label for="id-pool">Бассейн</label>
                         <!--  Парковка  -->
                         <input type="checkbox" class="checkbox-button" id="id-park" name="park" value="value-parking">
-                        <label for="id-park" name="park">Парковка</label>
+                        <label for="id-park">Парковка</label>
                         <!--  Wi-Fi  -->
                         <input type="checkbox" class="checkbox-button" id="id-wi-fi" name="wi-fi" value="value-wi-fi">
-                        <label for="id-wi-fi" name="wi-fi">Wi-Fi</label>
+                        <label for="id-wi-fi">Wi-Fi</label>
                     </div>
                     <div class="inner-container checkbox-position">
                         <h4>Тип жилья:</h4>
                         <!--  Гостиница  -->
                         <input type="checkbox" class="checkbox-button" id="id-hotel" name="hotel" value="value-hotel" checked>
-                        <label for="id-hotel" name="hotel">Гостиница</label>
+                        <label for="id-hotel">Гостиница</label>
                         <!--  Мотель  -->
                         <input type="checkbox" class="checkbox-button" id="id-motel" name="motel" value="value-motel" checked>
-                        <label for="id-motel" name="motel">Мотель</label>
+                        <label for="id-motel">Мотель</label>
                         <!--  Апартаменты  -->
                         <input type="checkbox" class="checkbox-button" id="id-apart" name="apart" value="value-apart" checked>
-                        <label for="id-apart" name="apart">Апартаменты</label>
+                        <label for="id-apart">Апартаменты</label>
                     </div>
                     <div class="inner-container">
                         <!--  ползунки  -->
                         <fieldset class="filter-item">
                             <legend>
-                                <h4>Стоимость в сутки, <span class="rub"></span></h4>
+                                <!--<h4>Стоимость в сутки, <span class="rub"></span></h4>-->
+                                <h4>Стоимость в сутки, <span class="rubznak">p</span></h4>
                             </legend>
                             <div class="range-filter">
                                 <div class="price-controls">
@@ -147,7 +148,7 @@
                         <div class="table">
                             <div class="table-row">
                                 <div class="table-cell">Гостиница</div>
-                                <div class="table-cell">от 4000 <span>₽</span></div>
+                                <div class="table-cell">от 4000 <span class="rubznak">p</span></div>
                             </div>
                             <div class="table-row">
                                 <div class="table-cell btn-detailed"><button type="button">Подробнее</button></div>
@@ -168,7 +169,7 @@
                         <div class="table">
                             <div class="table-row">
                                 <div class="table-cell">Гостиница</div>
-                                <div class="table-cell">от 3000 <span>&#8381;</span></div>
+                                <div class="table-cell">от 3000 <span class="rubznak">p</span></div>
                             </div>
                             <div class="table-row">
                                 <div class="table-cell btn-detailed"><button type="button">Подробнее</button></div>
@@ -189,7 +190,7 @@
                         <div class="table">
                             <div class="table-row">
                                 <div class="table-cell">Гостиница</div>
-                                <div class="table-cell">от 2000 <span>&#8381;</span></div>
+                                <div class="table-cell">от 2000 <span class="rubznak">p</span></div>
                             </div>
                             <div class="table-row">
                                 <div class="table-cell btn-detailed"><button type="button">Подробнее</button></div>
