--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </section>
         <section>
             <div class="container">
-                <button type="button" class="input-data">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+                <h3><button type="button" class="input-data">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button></h3>
             </div>
             <form action="#">
                 <div class="form-popup">
