Завершение основной страницы

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <section class="container">
             <div class="text-pic">
-                <h2>Настоящий городок</h2>
+                <h2>Настоящий<br> городок</h2>
                 <p>№1</p>
                 <p>Седона — не аттракцион для туристов, там<br> течёт своя жизнь</p>
             </div>
@@ -59,7 +59,7 @@
                 <div class="feature-item">
                     <img src="img/icon-1.svg" width="79" height="76" alt="домик">
                     <h3>Жильё</h3>
-                    <p>Рекомендуем пожить в настоящем мотеле,<br> всё как в кино!</p>
+                    <p>Рекомендуем пожить в настоящем<br> мотеле, всё как в кино!</p>
                 </div>
                 <div class="feature-item">
                     <img src="img/icon-3.svg" width="81" height="76" alt="бургер">
@@ -76,7 +76,7 @@
         <section class="container">
             <img src="img/image3.jpg" width="800" height="256" alt="мост Дьявола">
             <div class="text-pic">
-                <h2>Там есть Мост дьявола</h2>
+                <h2>Там есть<br> Мост дьявола</h2>
                 <p>№2</p>
                 <p>Да, по нему можно пройти! Если конечно<br> вы осмелитесь</p>
             </div>
@@ -85,17 +85,17 @@
         <section class="landmark">
             <div class="container">
                 <div class="landmark-item">
-                    <h3>Небольшая площадь</h3>
+                    <h3>Небольшая<br> площадь</h3>
                     <p>№3</p>
                     <p>Все достопримечательности<br> находятся очень близко</p>
                 </div>
                 <div class="landmark-item">
-                    <h3>Красивая дорога</h3>
+                    <h3>Красивая<br> дорога</h3>
                     <p>№4</p>
                     <p>Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
                 </div>
                 <div class="landmark-item">
-                    <h3>Мало туристов</h3>
+                    <h3>Мало<br> туристов</h3>
                     <p>№5</p>
                     <p>Большинство едет в Гранд каньон<br> и толпится там</p>
                 </div>
@@ -105,10 +105,10 @@
         <section class="container">
             <div class="offers">
                 <h2>Заинтересовались?</h2>
-                <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+                <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             </div>
         </section>
-        <section>
+        <section class="offers-search">
             <div class="container">
                 <h3><button type="button" class="input-data">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button></h3>
             </div>
